updated makefile to let user specify compiler commands or similar; added a compile error SQUTF8 and SQUNICODE are incompatible!  Please enter the commit message for your changes. Lines starting

--- a/sq/Makefile
+++ b/sq/Makefile
@@ -12,10 +12,10 @@ SRCS= sq.c
 	
 	
 sq32:
-	g++ -O2 -s -fno-exceptions -fno-rtti -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+	$(CPP) -O2 -s -fno-exceptions -fno-rtti -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
 
 sqprof:
-	g++ -O2 -pg -fno-exceptions -fno-rtti -g3 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS) #-pie -gstabs
+	$(CPP) -O2 -pg -fno-exceptions -fno-rtti -g3 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS) #-pie -gstabs
 	
 sq64:
-	g++ -O2 -s -m64 -fno-exceptions -fno-rtti -D_SQ64 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
+	$(CPP) -O2 -s -m64 -fno-exceptions -fno-rtti -D_SQ64 -o $(OUT) $(SRCS) $(INCZ) $(LIBZ) $(LIB) $(DEFS)
